# retrieve-extractors

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  README.md  conanfile.txt  meson.build  pyproject.toml
ext/mupdf/: meson.build
include/: document.h  either.h  main.h  retrieve.h
lib/pkgconfig/: meson.build
src/: document.c  either.c  meson.build  retrieve.c
subprojects/: unity.wrap
subprojects/mupdf/: meson.build
tests/: meson.build
tests/src/: test_document.c  test_either.c  test_retrieve.c
